# gm-bot

./: Cargo.toml  README.md  gm_metadata.scale
src/: main.rs
